--- a/app/src/main/res/layout/tab_menu_message.xml
+++ b/app/src/main/res/layout/tab_menu_message.xml
@@ -25,7 +25,8 @@
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="12dp"
-        android:text="1"/>
+        android:visibility="invisible"
+        />
 
     <TextView
         android:id="@+id/tab_text"
