--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="smallSpace">10dp</dimen>
+    <dimen name="bigSpace">25dp</dimen>
+    <dimen name="big_text_size">22sp</dimen>
+
 </resources>
