--- a/app/src/main/res/layout/group_list_header.xml
+++ b/app/src/main/res/layout/group_list_header.xml
@@ -16,6 +16,7 @@
         android:paddingBottom="5dp"
         android:textColor="@color/header_text_bottom_line"
         android:textSize="17sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        />
 
 </RelativeLayout>
