--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,9 @@
                     android:layout_marginTop="16dp"
                     android:text="@string/action_sign_in"
                     android:textStyle="bold"
-                    android:background="@drawable/button_selector_login"/>
+                    android:background="@drawable/button_selector_login"
+                    android:textColor="@android:color/white"
+                    android:textSize="18dp"/>
 
             </LinearLayout>
     </ScrollView>
