--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,5 +8,13 @@
     <style name="Widget.Styled.ActionBar" parent="Widget.Sherlock.Light.ActionBar.Solid.Inverse">
         <item name="background">@drawable/header_bar_background</item>
         <item name="android:background">@drawable/header_bar_background</item>
+        <item name="android:indeterminateProgressStyle">@style/ActionBarProgressBar.Small</item>
+        <item name="indeterminateProgressStyle">@style/ActionBarProgressBar.Small</item>
+    </style>
+    <style name="ActionBarProgressBar.Small" parent="@android:style/Widget.Holo.ProgressBar.Small">
+        <item name="android:minWidth">28dp</item>
+        <item name="android:maxWidth">28dp</item>
+        <item name="android:minHeight">28dp</item>
+        <item name="android:maxHeight">28dp</item>
     </style>
 </resources>
